@@ -1028,7 +1028,7 @@ static void xnshadow_realtime_sysentry (adevinfo_t *evinfo)
 	       callback routine before returning to user-space. */
 	    goto propagate_syscall;
 
-	printk("Xenomai: bad syscall %ld/%ld -- no skin loaded\n",
+	printk("RTAI: bad syscall %ld/%ld -- no skin loaded\n",
 	       __xn_mux_id(regs),
 	       __xn_mux_op(regs));
 
