@@ -17,7 +17,17 @@
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ *
+ * \ingroup mutex
  */
+
+/*!
+ * \ingroup native
+ * \defgroup mutex Mutex services.
+ *
+ * Mutex services.
+ *
+ *@{*/
 
 #include <nucleus/pod.h>
 #include <rtai/task.h>
@@ -355,3 +365,11 @@ int rt_mutex_inquire (RT_MUTEX *mutex,
 
     return err;
 }
+
+/*@}*/
+
+EXPORT_SYMBOL(rt_mutex_create);
+EXPORT_SYMBOL(rt_mutex_delete);
+EXPORT_SYMBOL(rt_mutex_lock);
+EXPORT_SYMBOL(rt_mutex_unlock);
+EXPORT_SYMBOL(rt_mutex_inquire);
