@@ -17,7 +17,17 @@
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ *
+ * \ingroup registry
  */
+
+/*!
+ * \ingroup native
+ * \defgroup registry Registry services.
+ *
+ * Registry services.
+ *
+ *@{*/
 
 #include <nucleus/pod.h>
 #include <nucleus/heap.h>
@@ -674,3 +684,12 @@ void *rt_registry_fetch (rt_handle_t handle)
 
     return objaddr;
 }
+
+/*@}*/
+
+EXPORT_SYMBOL(rt_registry_enter);
+EXPORT_SYMBOL(rt_registry_bind);
+EXPORT_SYMBOL(rt_registry_remove);
+EXPORT_SYMBOL(rt_registry_get);
+EXPORT_SYMBOL(rt_registry_fetch);
+EXPORT_SYMBOL(rt_registry_put);
